--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-lottie": "^1.2.4"
   },
